Updating to use mici=0.1.3 and using smaller system when not running locally

--- a/FitzHugh-Nagumo_example.ipynb
+++ b/FitzHugh-Nagumo_example.ipynb
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to allow us to illustrate performing inference with the model, we first generate simulated observed data from the model itself, with the aim of then inferring the posterior distribution on the 'unknown' latent state given the simulated observations. We use $\\mathtt{T} = 100$ observation times with interobservation interval $\\Delta = 0.5$ and $\\mathtt{S} = 25$ integrator steps per interobservation interval ($\\delta = 0.02$) giving us an overall latent dimension of $\\mathtt{Q} = 5006$."
+    "In order to allow us to illustrate performing inference with the model, we first generate simulated observed data from the model itself, with the aim of then inferring the posterior distribution on the 'unknown' latent state given the simulated observations. We use $\\mathtt{T} = 100$ observation times with interobservation interval $\\Delta = 0.5$ and $\\mathtt{S} = 25$ integrator steps per interobservation interval ($\\delta = 0.02$) giving us an overall latent dimension of $\\mathtt{Q} = 5006$ (we instead use $\\mathtt{T} = 20$ and $\\mathtt{S} = 10$ if not running locally to reduce the CPU demand with then $\\mathtt{Q} = 406$)."
    ]
   },
   {
@@ -363,9 +363,13 @@
     "num_param = len(z)\n",
     "dim_state = len(x)\n",
     "dim_noise = len(v)\n",
-    "num_obs = 100\n",
     "obs_interval = 0.5\n",
-    "num_steps_per_obs = 25\n",
+    "if not (ON_BINDER or ON_COLAB):\n",
+    "    num_obs = 100\n",
+    "    num_steps_per_obs = 25\n",
+    "else:\n",
+    "    num_obs = 20\n",
+    "    num_steps_per_obs = 10\n",
     "num_steps = num_obs * num_steps_per_obs\n",
     "dim_q = num_param + dim_state + num_obs * num_steps_per_obs * dim_noise\n",
     "delta = obs_interval / num_steps_per_obs"
@@ -464,15 +468,8 @@
     "\n",
     "[![Mici logo](https://matt-graham.github.io/mici/images/mici-logo-rectangular.svg)](https://matt-graham.github.io/mici/)\n",
     "\n",
-    "To perform inference in the model given our simulated observed data, we use the manifold Markov chain Monte Carlo (MCMC) implementation in the package [*Mici*](https://matt-graham.github.io/mici/). \n",
+    "To perform inference in the model given our simulated observed data, we use the manifold MCMC method implementations in the package [*Mici*](https://matt-graham.github.io/mici/). \n",
     "\n",
-    "*Mici* is being actively developed so some of the syntax below for constructing the model and sampling-related objects may change in a future release. The specific package version used here is [v0.1.2](https://pypi.org/project/mici/0.1.2/) and this version can be directly installed in to a Python environment using `pip install mici==0.1.2`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "For simplicity we will use a standard Euclidean metric on the position (latent) space, i.e. corresponding to an identity matrix representation. Mici includes various structured matrix classes in the `mici.matrices` module which efficiently implement matrix multiplication and other basic linear algebra operations (for instance when multiplying with the matrix multiply operator `@` by an instance of the `mici.matrices.IdentityMatrix` class the value being multiplied is returned rather than explicitly computing the product with an array representation of the identity matrix)."
    ]
   },
