Changing old retraction_solver references and defaulting to smaller model and shorter chains on Binder

--- a/FitzHugh-Nagumo_example.ipynb
+++ b/FitzHugh-Nagumo_example.ipynb
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to allow us to illustrate performing inference with the model, we first generate simulated observed data from the model itself, with the aim of then inferring the posterior distribution on the 'unknown' latent state given the simulated observations. We use $\\mathtt{T} = 100$ observation times with interobservation interval $\\Delta = 0.5$ and $\\mathtt{S} = 25$ integrator steps per interobservation interval ($\\delta = 0.02$) giving us an overall latent dimension of $\\mathtt{Q} = 5006$ (we instead use $\\mathtt{T} = 20$ and $\\mathtt{S} = 10$ if not running locally to reduce the CPU demand with then $\\mathtt{Q} = 406$)."
+    "In order to allow us to illustrate performing inference with the model, we first generate simulated observed data from the model itself, with the aim of then inferring the posterior distribution on the 'unknown' latent state given the simulated observations. We use $\\mathtt{T} = 100$ observation times with interobservation interval $\\Delta = 0.5$ and $\\mathtt{S} = 25$ integrator steps per interobservation interval ($\\delta = 0.02$) giving us an overall latent dimension of $\\mathtt{Q} = 5006$ (we instead use $\\mathtt{T} = 20$ and $\\mathtt{S} = 10$ if running on Binder to reduce the CPU demand with then $\\mathtt{Q} = 406$)."
    ]
   },
   {
@@ -364,7 +364,7 @@
     "dim_state = len(x)\n",
     "dim_noise = len(v)\n",
     "obs_interval = 0.5\n",
-    "if not (ON_BINDER or ON_COLAB):\n",
+    "if not ON_BINDER:\n",
     "    num_obs = 100\n",
     "    num_steps_per_obs = 25\n",
     "else:\n",
@@ -522,9 +522,9 @@
     "position_tol = 1e-7  # Convergence tolerance in position (latent) space\n",
     "integrator = mici.integrators.ConstrainedLeapfrogIntegrator(\n",
     "    system, step_size, num_inner_step, \n",
-    "    retraction_solver=mici_extensions.retract_onto_manifold_quasi_newton, \n",
+    "    projection_solver=mici_extensions.solve_projection_onto_manifold_quasi_newton, \n",
     "    reverse_check_tol=2 * position_tol, \n",
-    "    retraction_solver_kwargs=dict(convergence_tol=constraint_tol, \n",
+    "    projection_solver_kwargs=dict(convergence_tol=constraint_tol, \n",
     "                                  position_tol=position_tol, \n",
     "                                  max_iters=max_iters))"
    ]
@@ -627,7 +627,9 @@
    "source": [
     "We now use the constructed `sampler` object to (sequentially) sample `num_chains` Markov chains for `num_sample + num_warmup` iterations, with later the first `num_warmup` iterations being discarded when calculating estimates / statistics using the chain samples, to minimise the effect of the initial transient convergence of the chains towards stationarity. We specify for three statistics to be interactively monitored during sampling - the average acceptance probability (`accept_prob`), proportion of integration transitions terminating due to non-convergence of the quasi-Newton iteration (`convergence_error`) and the proportion of integration transitions terminating due to detection of a non-reversible step (`non_reversible_step`).\n",
     "\n",
-    "Due to the just-in-time compilation of the JAX model functions, the first couple of chain iterations will take longer as each of the model functions are compiled on their first calls (this happens for the first two rather than one iteration as the compiled model functions are specific to the partition / set of observation times conditioned on). During sampling, progress bars will be shown for each chain."
+    "Due to the just-in-time compilation of the JAX model functions, the first couple of chain iterations will take longer as each of the model functions are compiled on their first calls (this happens for the first two rather than one iteration as the compiled model functions are specific to the partition / set of observation times conditioned on). During sampling, progress bars will be shown for each chain.\n",
+    "\n",
+    "Note as sampling the chains puts a high demand on the CPU we default to sampling only very short chains if running on Binder to avoid creating excessive CPU load on their servers (chains will also run much slower on Binder servers due to the restricted CPU availabity). We recommend running longer chains on your local machine; the default settings of 2 chains of 1500 samples took approximately 1 hour to run on the laptop used for testing."
    ]
   },
   {
@@ -709,8 +711,12 @@
     }
    ],
    "source": [
-    "num_sample = 1000  # Number of chain samples in 'main' sampling phase\n",
-    "num_warmup = 500  # Number of chain samples in 'warmup' sampling phase\n",
+    "if not ON_BINDER:\n",
+    "    num_sample = 1000  # Number of chain samples in 'main' sampling phase\n",
+    "    num_warmup = 500  # Number of chain samples in 'warmup' sampling phase\n",
+    "else:\n",
+    "    num_warmup = 0\n",
+    "    num_sample = 25\n",
     "final_states, traces, stats = sampler.sample_chains(\n",
     "    num_sample + num_warmup, init_states, trace_funcs=[trace_func],\n",
     "    monitor_stats=['accept_prob', 'convergence_error', 'non_reversible_step'])"
