Updating notebook to be consistent with sde/mici_extensions.py edits

--- a/FitzHugh-Nagumo_example.ipynb
+++ b/FitzHugh-Nagumo_example.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def euler_maruyama_step(x, v, δ, z):\n",
+    "def euler_maruyama_step(z, x, v, δ):\n",
     "    return x + δ * drift_func(x, z) + δ**0.5 * diff_coeff(x, z) @ v"
    ]
   },
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def strong_order_1p5_step(x, v, δ, z):\n",
+    "def strong_order_1p5_step(z, x, v, δ):\n",
     "    a = drift_func(x, z)\n",
     "    da_dx = diffops.jacobian(drift_func)(x, z)\n",
     "    B = diff_coeff(x, z)\n",
@@ -222,7 +222,7 @@
     "else:\n",
     "    forward_func = strong_order_1p5_step\n",
     "    dim_v = 2 * dim_w\n",
-    "forward_func = symnum.numpify_func(forward_func, (dim_x,), (dim_v,), None, (dim_z,), numpy_module=jnp)"
+    "forward_func = symnum.numpify_func(forward_func, (dim_z,), (dim_x,), (dim_v,), None, numpy_module=jnp)"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "        0.5 * u[3] + 1,  # β\n",
     "    ])\n",
     "\n",
-    "def generate_x_0(v_0, params):\n",
+    "def generate_x_0(z, v_0):\n",
     "    \"\"\"Generate an initial state from prior given a standard normal vector.\"\"\"\n",
     "    return jnp.array([-0.5, -0.5]) + v_0"
    ]
@@ -318,14 +318,14 @@
     "    \"\"\"Generate parameters and state + obs. sequences from model given q.\"\"\"\n",
     "    u, v_0, v_r = jnp.split(q, (dim_z, dim_z + dim_x))\n",
     "    z = generate_z(u)\n",
-    "    x_0 = generate_x_0(v_0, z)\n",
+    "    x_0 = generate_x_0(z, v_0)\n",
     "    v_seq = jnp.reshape(v_r, (-1, dim_v))\n",
     "\n",
     "    # Define integrator step function to scan:\n",
     "    #   first argument is carried-forward state,\n",
     "    #   second argument is input from scanned sequence.\n",
     "    def step_func(x, v):\n",
-    "        x_n = forward_func(x, v, δ, z)\n",
+    "        x_n = forward_func(z, x, v, δ)\n",
     "        # Scan expects to return a tuple with the first element the carry-forward state\n",
     "        # and second element a slice of the output sequence (here also the state)\n",
     "        return x_n, x_n\n",
@@ -607,7 +607,7 @@
     "    u, v_0, v_seq = onp.split(q, (dim_z, dim_z + dim_x,))\n",
     "    v_seq = v_seq.reshape((-1, dim_v))\n",
     "    z = generate_z(u)\n",
-    "    x_0 = generate_x_0(v_0, z)\n",
+    "    x_0 = generate_x_0(z, v_0)\n",
     "    return {'x_0': x_0, 'σ': z[0], 'ϵ': z[1], 'γ': z[2], 'β': z[3], 'v_seq': v_seq}"
    ]
   },
@@ -651,13 +651,13 @@
        "          <div style=\"margin-left: 8px; flex-shrink: 0;\n",
        "                      font-family: var(--jp-code-font-family);\n",
        "                      font-size: var(--jp-code-font-size);\">\n",
-       "            1000/1000 [09:21&lt;00:00, 1.78it/s, accept_prob=0.986, convergence_error=0.0330, non_reversible_step=0.00, n_step=61.9]\n",
+       "            1000/1000 [09:50&lt;00:00, 1.69it/s, accept_prob=0.986, convergence_error=0.0330, non_reversible_step=0.00, n_step=61.9]\n",
        "          </div>\n",
        "        </div>\n",
        "        "
       ],
       "text/plain": [
-       "Chain 1/2: 100%|██████████|1000/1000 [09:21<00:00, 1.78it/s, accept_prob=0.986, convergence_error=0.0330, non_reversible_step=0.00, n_step=61.9]"
+       "Chain 1/2: 100%|██████████|1000/1000 [09:50<00:00, 1.69it/s, accept_prob=0.986, convergence_error=0.0330, non_reversible_step=0.00, n_step=61.9]"
       ]
      },
      "metadata": {},
@@ -687,13 +687,13 @@
        "          <div style=\"margin-left: 8px; flex-shrink: 0;\n",
        "                      font-family: var(--jp-code-font-family);\n",
        "                      font-size: var(--jp-code-font-size);\">\n",
-       "            1000/1000 [08:43&lt;00:00, 1.91it/s, accept_prob=0.987, convergence_error=0.0170, non_reversible_step=0.00, n_step=62.3]\n",
+       "            1000/1000 [09:28&lt;00:00, 1.76it/s, accept_prob=0.987, convergence_error=0.0170, non_reversible_step=0.00, n_step=62.3]\n",
        "          </div>\n",
        "        </div>\n",
        "        "
       ],
       "text/plain": [
-       "Chain 2/2: 100%|██████████|1000/1000 [08:43<00:00, 1.91it/s, accept_prob=0.987, convergence_error=0.0170, non_reversible_step=0.00, n_step=62.3]"
+       "Chain 2/2: 100%|██████████|1000/1000 [09:28<00:00, 1.76it/s, accept_prob=0.987, convergence_error=0.0170, non_reversible_step=0.00, n_step=62.3]"
       ]
      },
      "metadata": {},
